Webサイトの雛形をとりあえずあげる。

--- a/index.html
+++ b/index.html
@@ -1,1 +1,125 @@
-Hello World!!
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Code for SAKE</title>
+    <meta name='viewport' content='width=device-width,initial-scale=1.0' />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <script src="./assets/js/application.js"></script>
+  </head>
+
+  <body>
+    <div class='wrap'>
+      <header class="header mb-5">
+          <nav class="navbar navbar-expand-lg bg-primary text-secondary">
+            <h1>Code for SAKE</h1>
+            <button class="navbar-toggler collapsed" type="button"
+                data-toggle="collapse"
+                data-target="#navmenu1"
+                aria-controls="navmenu1"
+                aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="material-icons">menu</span>
+            </button>
+            <div class="navbar-collapse collapse justify-content-end" id="navmenu1" style>
+              <div class="navbar-nav">
+                <a href="#news">NEWS</a>
+                <a href="#projects">Projects</a>
+                <a href="#aboutus">About Us</a>
+                <a href="#link">Link</a>
+                <a href="https://github.com/Code-for-SAKE">GitHub</a>
+                <a href="https://cfj.slack.com/archives/C014YUFP8LQ">Slack</a>
+                <a href="https://www.facebook.com/groups/486830868499290/">Facebook</a>
+              </div>
+            </div>
+          </nav>
+      </header>
+      <div class="container">
+        <div>
+          <h2 class='mb-5 text-center'>日本酒が危ない</h2>
+          <p>日本酒のオープンデータを全国の酒蔵と一緒につくり、日本酒の文化や技術を後世に残しながら、
+            酒蔵と飲兵衛の顔が見える関係性をネット上でつくりたい！と集まった人たちの活動</p>
+        </div>
+        <section id="news">
+          <h2 class='mb-5 text-center'>NEWS</h2>
+
+        </section>
+        <section id="projects">
+          <h2 class='mb-5 text-center'>Projects</h2>
+          <div class="row">
+            <div class="p-1 col-md-4 mx-auto">
+              <div class="card">
+                <img class="card-img-top" src="..." alt="Project1">
+                <div class="card-body">
+                  <h5 class="card-title">Project1</h5>
+                  <p class="card-text">Project1</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="p-1 col-md-4 mx-auto">
+              <div class="card">
+                <img class="card-img-top" src="..." alt="Project2">
+                <div class="card-body">
+                  <h5 class="card-title">Project2</h5>
+                  <p class="card-text">Project2</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="p-1 col-md-4 mx-auto">
+              <div class="card">
+                <img class="card-img-top" src="..." alt="Project3">
+                <div class="card-body">
+                  <h5 class="card-title">Project3</h5>
+                  <p class="card-text">Project3</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="p-1 col-md-4 mx-auto">
+              <div class="card">
+                <img class="card-img-top" src="..." alt="Project4">
+                <div class="card-body">
+                  <h5 class="card-title">Project4</h5>
+                  <p class="card-text">Project4</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section id="aboutus">
+          <h2 class='mb-5 text-center'>About Us</h2>
+        </section>
+        <section id="link">
+          <h2 class='mb-5 text-center'>Link</h2>
+        </section>
+      </div>
+      <div class="footer-link bg-secondary text-primary">
+        <ul class="link-list">
+          <li class="footer-list">
+            <a href="https://github.com/Code-for-SAKE">GitHub</a>
+          </li>
+          <li class="footer-list">
+            <a href="https://cfj.slack.com/archives/C014YUFP8LQ">Slack</a>
+          </li>
+          <li class="footer-list">
+            <a href="https://www.facebook.com/groups/486830868499290/">Facebook</a>
+          </li>
+        </ul>
+      </div>
+      <footer class="bg-primary text-secondary footer text-center">
+          <div>
+            &copy; Code for SAKE All rights reserved.
+          </div>
+      </footer>
+    </div>
+  </body>
+</html>
+
+
