--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             </ul>
           </div>
         </section>
-        <section id="projects">
-          <h2 class='mb-5 text-center'>Projects</h2>
+        <section id="projects" class="mb-5">
+          <h2 class='text-center'>Projects</h2>
           <div class="card-deck">
             <div class="p-1 col-md-4 mx-auto">
               <div class="card">
@@ -173,12 +173,46 @@
             </div>
           </div>
         </section>
-        <section id="aboutus">
-          <h2 class='mb-5 text-center'>About Us</h2>
-          
+        <section id="aboutus" class="mb-5">
+          <h2 class='text-center'>About Us</h2>
+          <div class="m-5">
+            <h3>日本酒の今</h3>
+            <p>戦前は5500蔵もありましたが、現在(2017年)は約1500蔵と1/3以下に減っています。また、上位13社が日本酒の50%以上を醸造しており、小規模の酒蔵が大半です。<br>
+              ビールやワインなど、消費者の選択肢が増える中で、それら小規模な酒蔵は経営難に陥る蔵が増えています。<br>
+            </p>
+            <h3>私たちの思い</h3>
+            <p>それでもこだわりの美味しいお酒を作る酒蔵にはずっと残ってもらいたい。<br>
+              また、自分好みの酒蔵が知らないうちに廃業してしまうかもしれない。<br>
+              日本酒を守ることは、土地の文化と自然を守ること。<br>
+              何より美味しい日本酒を飲み続けていたい。<br>
+              <br>
+              そんな思いを共にしたメンバーでITを駆使してどんな貢献ができるか模索しています。
+            </p>
+            <h3>シビックテックについて</h3>
+            <p>
+              シビックテック（Civic Tech）は、Civic（市民）とTech（テクノロジー）をかけあわせた造語です。市民自身がテクノロジーを活用して、社会や地域の課題解決を目指す取り組みのことです。<br>
+              Code for SAKEもシビックテック活動の一つとして社会課題(酒蔵の減少)の解決に取り組んでいます。
+            </p>
+          </div>
         </section>
-        <section id="link">
-          <h2 class='mb-5 text-center'>Link</h2>
+        <section id="link" class="mb-5">
+          <h2 class='text-center'>Link</h2>
+          <h3>関連アカウント一覧</h3>
+          <ul class="">
+            <li class="">
+              <a href="https://github.com/Code-for-SAKE">Code for SAKE GitHub Organization</a>
+            </li>
+            <li class="">
+              <a href="https://cfj.slack.com/archives/C014YUFP8LQ">Code for SAKE Slackチャンネル(Code for Japan内)</a>
+            </li>
+            <li class="">
+              <a href="https://www.facebook.com/groups/486830868499290/">Code for SAKE Facebookグループ</a>
+            </li>
+            <li class="">
+              <a href="https://code4japan.peatix.com/view">Code for Japan イベントページ</a><br>
+              Code for Japan主催のソーシャルハックデーというイベントで活動することが多いです。
+            </li>
+          </ul>
         </section>
       </div>
       <div class="footer-link bg-secondary text-primary">
