--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class='wrap'>
       <header class="header">
           <nav class="navbar navbar-expand-lg bg-primary text-secondary">
-            <h1>Code for SAKE</h1>
+            <img src="assets/img/logo.png" height="70px" alt="Code for SAKE">
             <button class="navbar-toggler collapsed" type="button"
                 data-toggle="collapse"
                 data-target="#navmenu1"
@@ -99,7 +99,8 @@
                 <img class="card-img-top" src="..." alt="試飲イキタイ">
                 <div class="card-body">
                   <h5 class="card-title">お猪口でサブスク『試飲イキタイ』</h5>
-                  <p class="card-text">提携する酒蔵や酒屋・飲食店などで日本酒試飲し放題のサブスクリプションサービスを開発します。
+                  <p class="card-text">提携する酒蔵や酒屋・飲食店などで日本酒試飲し放題のサブスクリプションサービスを開発します。<br>
+                    酒屋や飲食店の日本酒の知識を集約するための手段でもあります。
                     </p>
                   <a href="#" class="btn btn-primary disabled">構想中</a>
                 </div>
@@ -166,7 +167,8 @@
                 <img class="card-img-top" src="..." alt="コミュニケーションサイト">
                 <div class="card-body">
                   <h5 class="card-title">酒蔵それぞれのファンを作る コミュニケーションサイト</h5>
-                  <p class="card-text"></p>
+                  <p class="card-text">これからの時代は万人受けする大量生産品より、こだわりを持った日本酒を作る酒蔵がそれぞれ全国、全世界のファンと深く繋がっていく時代だと思っています。<br>
+                    酒蔵が自分たちだけで実現するのは難しいので、酒蔵と酒好きが集まるコミュニケーションサイトを作りたい。</p>
                   <a href="#" class="btn btn-primary disabled">構想中</a>
                 </div>
               </div>
@@ -197,20 +199,38 @@
         </section>
         <section id="link" class="mb-5">
           <h2 class='text-center'>Link</h2>
-          <h3>関連アカウント一覧</h3>
-          <ul class="">
-            <li class="">
+          <h3>公式アカウント一覧</h3>
+          <ul>
+            <li>
               <a href="https://github.com/Code-for-SAKE">Code for SAKE GitHub Organization</a>
             </li>
-            <li class="">
+            <li>
               <a href="https://cfj.slack.com/archives/C014YUFP8LQ">Code for SAKE Slackチャンネル(Code for Japan内)</a>
             </li>
-            <li class="">
+            <li>
               <a href="https://www.facebook.com/groups/486830868499290/">Code for SAKE Facebookグループ</a>
             </li>
-            <li class="">
+          </ul>
+          <h3>シビックテック関連</h3>
+          <ul>
+            <li>
+              <a href="https://www.code4japan.org/">Code for Japan</a><br>
+              Code for Japan主催のCode for Japan Summit 2018の一セッションとしてCode for SAKEは始まりました。
+            </li>
+            <li>
               <a href="https://code4japan.peatix.com/view">Code for Japan イベントページ</a><br>
               Code for Japan主催のソーシャルハックデーというイベントで活動することが多いです。
+            </li>
+          </ul>
+          <h3>日本酒関連</h3>
+          <ul>
+            <li>
+              <a href="https://naorai.co/">ナオライ</a><br>
+              Code for SAKEメンバーの一人が代表の日本酒メーカー
+            </li>
+            <li>
+              <a href="https://mukai-zakura.com/">向原酒造</a><br>
+              第一回オンライン酒蔵ハッカソンで協力いただいた広島県安芸高田市の酒蔵
             </li>
           </ul>
         </section>
