--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="p-1 col-md-4 mx-auto">
               <div class="card">
-                <img class="card-img-top" src="..." alt="試飲イキタイ">
+                <img class="card-img-top" src="assets/img/logo.png" alt="試飲イキタイ">
                 <div class="card-body">
                   <h5 class="card-title">お猪口でサブスク『試飲イキタイ』</h5>
                   <p class="card-text">提携する酒蔵や酒屋・飲食店などで日本酒試飲し放題のサブスクリプションサービスを開発します。<br>
@@ -108,7 +108,7 @@
             </div>
             <div class="p-1 col-md-4 mx-auto">
               <div class="card">
-                <img class="card-img-top" src="..." alt="全部ノミタイ">
+                <img class="card-img-top" src="assets/img/logo.png" alt="全部ノミタイ">
                 <div class="card-body">
                   <h5 class="card-title">お猪口大の日本酒詰め合わせセット『全部ノミタイ』</h5>
                   <p class="card-text">日本酒は種類が豊富な上に毎年新しいものも出てくる。それを４号瓶で全て飲むのは無理。<br>
@@ -143,7 +143,7 @@
             </div>
             <div class="p-1 col-md-4 mx-auto">
               <div class="card">
-                <img class="card-img-top" src="..." alt="日本酒の味、香りのレビュー機能">
+                <img class="card-img-top" src="assets/img/logo.png" alt="日本酒の味、香りのレビュー機能">
                 <div class="card-body">
                   <h5 class="card-title">日本酒の味、香りのレビュー機能</h5>
                   <p class="card-text">星数だけでは伝わらないし、違いはあるけどどちらも美味しい。それを伝えられるレビュー機能を開発します。</p>
@@ -153,7 +153,7 @@
             </div>
             <div class="p-1 col-md-4 mx-auto">
               <div class="card">
-                <img class="card-img-top" src="..." alt="Code for SAKEオリジナル酒づくり">
+                <img class="card-img-top" src="assets/img/logo.png" alt="Code for SAKEオリジナル酒づくり">
                 <div class="card-body">
                   <h5 class="card-title">Code for SAKEオリジナル酒づくり</h5>
                   <p class="card-text">酒造りを学びながらオリジナルの酒を作ります。<br>
@@ -164,7 +164,7 @@
             </div>
             <div class="p-1 col-md-4 mx-auto">
               <div class="card">
-                <img class="card-img-top" src="..." alt="コミュニケーションサイト">
+                <img class="card-img-top" src="assets/img/logo.png" alt="コミュニケーションサイト">
                 <div class="card-body">
                   <h5 class="card-title">酒蔵それぞれのファンを作る コミュニケーションサイト</h5>
                   <p class="card-text">これからの時代は万人受けする大量生産品より、こだわりを持った日本酒を作る酒蔵がそれぞれ全国、全世界のファンと深く繋がっていく時代だと思っています。<br>
