--- a/index.html
+++ b/index.html
@@ -64,111 +64,131 @@
         <section id="projects" class="mb-5">
           <h2 class='text-center'>Projects</h2>
           <div class="card-deck">
-            <div class="p-1 col-md-4 mx-auto">
-              <div class="card">
+            <div class="p-1 col-md-6 col-lg-4 mx-auto">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/spreadsheet.png" alt="日本酒オープンデータ">
                 <div class="card-body">
                   <h5 class="card-title">日本酒オープンデータを作る</h5>
                   <p class="card-text">酒蔵の情報をオープンに整理して、ITでサポートするための基盤を作ります。</p>
+                </div>
+                <div class="card-footer text-right">
                   <a href="#" class="btn btn-primary disabled">GoogleSpreadSheet</a>
                 </div>
               </div>
             </div>
-            <div class="p-1 col-md-4 mx-auto">
-              <div class="card">
+            <div class="p-1 col-md-6 col-lg-4 mx-auto">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/tastingmap.png" alt="SAKEChart.js">
                 <div class="card-body">
                   <h5 class="card-title">SAKEChart.js</h5>
                   <p class="card-text">日本酒のビジュアライズに特化したチャート生成ライブラリを開発します。</p>
+                </div>
+                <div class="card-footer text-right">
                   <a href="https://github.com/Code-for-SAKE/SakeChart.js" class="btn btn-primary">Go to GitHub</a>
                 </div>
               </div>
             </div>
-            <div class="p-1 col-md-4 mx-auto">
-              <div class="card">
+            <div class="p-1 col-md-6 col-lg-4 mx-auto">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/sakeviewer.png" alt="SAKEViewer">
                 <div class="card-body">
                   <h5 class="card-title">SAKEViewer</h5>
                   <p class="card-text">日本酒データの3Dビジュアライズツールをpythonで開発しました。</p>
+                </div>
+                <div class="card-footer text-right">
                   <a href="https://github.com/Code-for-SAKE/SakeViewer" class="btn btn-primary">Go to GitHub</a>
                 </div>
               </div>
             </div>
-            <div class="p-1 col-md-4 mx-auto">
-              <div class="card">
+            <div class="p-1 col-md-6 col-lg-4 mx-auto">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/logo.png" alt="試飲イキタイ">
                 <div class="card-body">
                   <h5 class="card-title">お猪口でサブスク『試飲イキタイ』</h5>
                   <p class="card-text">提携する酒蔵や酒屋・飲食店などで日本酒試飲し放題のサブスクリプションサービスを開発します。<br>
                     酒屋や飲食店の日本酒の知識を集約するための手段でもあります。
                     </p>
+                </div>
+                <div class="card-footer text-right">
                   <a href="#" class="btn btn-primary disabled">構想中</a>
                 </div>
               </div>
             </div>
-            <div class="p-1 col-md-4 mx-auto">
-              <div class="card">
+            <div class="p-1 col-md-6 col-lg-4 mx-auto">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/logo.png" alt="全部ノミタイ">
                 <div class="card-body">
                   <h5 class="card-title">お猪口大の日本酒詰め合わせセット『全部ノミタイ』</h5>
                   <p class="card-text">日本酒は種類が豊富な上に毎年新しいものも出てくる。それを４号瓶で全て飲むのは無理。<br>
                     お猪口大ならなんとか飲み切れる！？<br>
                     そんな野望をかなえるサービスを開発します。</p>
+                </div>
+                <div class="card-footer text-right">
                   <a href="#" class="btn btn-primary disabled">構想中</a>
                 </div>
               </div>
             </div>
-            <div class="p-1 col-md-4 mx-auto">
-              <div class="card">
+            <div class="p-1 col-md-6 col-lg-4 mx-auto">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/zoom.png" alt="オンライン酒蔵見学＆飲み会">
                 <div class="card-body">
                   <h5 class="card-title">オンライン酒蔵見学＆飲み会</h5>
                   <p class="card-text">普段は行けない遠くの酒蔵にもオンラインなら見学できます。<br>
                     酒蔵のお酒を取り寄せて、飲みながら見るオンライン酒蔵見学は新しい生活様式になるのか？</p>
+                </div>
+                <div class="card-footer text-right">
                   <a href="#" class="btn btn-primary disabled">随時開催</a>
                 </div>
               </div>
             </div>
-            <div class="p-1 col-md-4 mx-auto">
-              <div class="card">
+            <div class="p-1 col-md-6 col-lg-4 mx-auto">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/mukaihara.png" alt="酒蔵のWebサイト改善ハッカソン">
                 <div class="card-body">
                   <h5 class="card-title">酒蔵のWebサイト改善ハッカソン</h5>
                   <p class="card-text">美味しい日本酒を作っている酒蔵もWebサイトはいまいちだったりします。<br>
                     Webサイトの改善でより多くの方に日本酒の美味しさを知ってもらうための活動です。<br>
                     オープンデータにする基盤を提供することでちゃんと更新されるオープンデータ作りに貢献します。</p>
+                </div>
+                <div class="card-footer text-right">
                   <a href="https://github.com/Code-for-SAKE/mukai-zakura" class="btn btn-primary">第一回の成果</a>
                 </div>
               </div>
             </div>
-            <div class="p-1 col-md-4 mx-auto">
-              <div class="card">
+            <div class="p-1 col-md-6 col-lg-4 mx-auto">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/logo.png" alt="日本酒の味、香りのレビュー機能">
                 <div class="card-body">
                   <h5 class="card-title">日本酒の味、香りのレビュー機能</h5>
                   <p class="card-text">星数だけでは伝わらないし、違いはあるけどどちらも美味しい。それを伝えられるレビュー機能を開発します。</p>
+                </div>
+                <div class="card-footer text-right">
                   <a href="#" class="btn btn-primary disabled">構想中</a>
                 </div>
               </div>
             </div>
-            <div class="p-1 col-md-4 mx-auto">
-              <div class="card">
+            <div class="p-1 col-md-6 col-lg-4 mx-auto">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/logo.png" alt="Code for SAKEオリジナル酒づくり">
                 <div class="card-body">
                   <h5 class="card-title">Code for SAKEオリジナル酒づくり</h5>
                   <p class="card-text">酒造りを学びながらオリジナルの酒を作ります。<br>
                     被災等の合った地域の酒蔵と積極的に進めたいと思っています。</p>
+                </div>
+                <div class="card-footer text-right">
                   <a href="#" class="btn btn-primary disabled">構想中</a>
                 </div>
               </div>
             </div>
-            <div class="p-1 col-md-4 mx-auto">
-              <div class="card">
+            <div class="p-1 col-md-6 col-lg-4 mx-auto">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/logo.png" alt="コミュニケーションサイト">
                 <div class="card-body">
                   <h5 class="card-title">酒蔵それぞれのファンを作る コミュニケーションサイト</h5>
                   <p class="card-text">これからの時代は万人受けする大量生産品より、こだわりを持った日本酒を作る酒蔵がそれぞれ全国、全世界のファンと深く繋がっていく時代だと思っています。<br>
                     酒蔵が自分たちだけで実現するのは難しいので、酒蔵と酒好きが集まるコミュニケーションサイトを作りたい。</p>
+                </div>
+                <div class="card-footer text-right">
                   <a href="#" class="btn btn-primary disabled">構想中</a>
                 </div>
               </div>
