タグをつけてみる

--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
                 <img class="card-img-top" src="assets/img/spreadsheet.png" alt="日本酒オープンデータ">
                 <div class="card-body">
                   <h5 class="card-title">日本酒オープンデータを作る</h5>
-                  <p class="card-text">酒蔵の情報をオープンに整理して、ITでサポートするための基盤を作ります。</p>
+                  <p class="card-text">酒蔵の情報をオープンに整理して、ITでサポートするための基盤を作ります。<br>
+                    Googleスプレッドシート上にまとめてみていますが、人力は難しい状況です。</p>
+                  <p>
+                    <span class="badge">OpenData</span>
+                  </p>
                 </div>
                 <div class="card-footer text-right">
                   <a href="#" class="btn btn-primary disabled">GoogleSpreadSheet</a>
@@ -82,6 +86,11 @@
                 <div class="card-body">
                   <h5 class="card-title">SAKEChart.js</h5>
                   <p class="card-text">日本酒のビジュアライズに特化したチャート生成ライブラリを開発します。</p>
+                  <p>
+                    <span class="badge">GitHub</span>
+                    <span class="badge">JS</span>
+                    <span class="badge">Chart.js</span>
+                  </p>
                 </div>
                 <div class="card-footer text-right">
                   <a href="https://github.com/Code-for-SAKE/SakeChart.js" class="btn btn-primary">Go to GitHub</a>
@@ -94,6 +103,11 @@
                 <div class="card-body">
                   <h5 class="card-title">SAKEViewer</h5>
                   <p class="card-text">日本酒データの3Dビジュアライズツールをpythonで開発しました。</p>
+                  <p>
+                    <span class="badge">GitHub</span>
+                    <span class="badge">Python</span>
+                    <span class="badge">Plotly</span>
+                  </p>
                 </div>
                 <div class="card-footer text-right">
                   <a href="https://github.com/Code-for-SAKE/SakeViewer" class="btn btn-primary">Go to GitHub</a>
@@ -107,7 +121,7 @@
                   <h5 class="card-title">お猪口でサブスク『試飲イキタイ』</h5>
                   <p class="card-text">提携する酒蔵や酒屋・飲食店などで日本酒試飲し放題のサブスクリプションサービスを開発します。<br>
                     酒屋や飲食店の日本酒の知識を集約するための手段でもあります。
-                    </p>
+                  </p>
                 </div>
                 <div class="card-footer text-right">
                   <a href="#" class="btn btn-primary disabled">構想中</a>
@@ -134,7 +148,11 @@
                 <div class="card-body">
                   <h5 class="card-title">オンライン酒蔵見学＆飲み会</h5>
                   <p class="card-text">普段は行けない遠くの酒蔵にもオンラインなら見学できます。<br>
-                    酒蔵のお酒を取り寄せて、飲みながら見るオンライン酒蔵見学は新しい生活様式になるのか？</p>
+                    酒蔵のお酒を取り寄せて、飲みながら見るオンライン酒蔵見学は新しい生活様式になるのか？
+                  </p>
+                  <p>
+                    <span class="badge">zoom</span>
+                  </p>
                 </div>
                 <div class="card-footer text-right">
                   <a href="#" class="btn btn-primary disabled">随時開催</a>
@@ -148,7 +166,13 @@
                   <h5 class="card-title">酒蔵のWebサイト改善ハッカソン</h5>
                   <p class="card-text">美味しい日本酒を作っている酒蔵もWebサイトはいまいちだったりします。<br>
                     Webサイトの改善でより多くの方に日本酒の美味しさを知ってもらうための活動です。<br>
-                    オープンデータにする基盤を提供することでちゃんと更新されるオープンデータ作りに貢献します。</p>
+                    オープンデータにする基盤を提供することでちゃんと更新されるオープンデータ作りに貢献します。
+                  </p>
+                  <p>
+                    <span class="badge">GitHubPages</span>
+                    <span class="badge">SiteSucker</span>
+                    <span class="badge">OpenData</span>
+                  </p>
                 </div>
                 <div class="card-footer text-right">
                   <a href="https://github.com/Code-for-SAKE/mukai-zakura" class="btn btn-primary">第一回の成果</a>
@@ -186,7 +210,11 @@
                 <div class="card-body">
                   <h5 class="card-title">酒蔵それぞれのファンを作る コミュニケーションサイト</h5>
                   <p class="card-text">これからの時代は万人受けする大量生産品より、こだわりを持った日本酒を作る酒蔵がそれぞれ全国、全世界のファンと深く繋がっていく時代だと思っています。<br>
-                    酒蔵が自分たちだけで実現するのは難しいので、酒蔵と酒好きが集まるコミュニケーションサイトを作りたい。</p>
+                    酒蔵が自分たちだけで実現するのは難しいので、酒蔵と酒好きが集まるコミュニケーションサイトを作りたい。
+                  </p>
+                  <p>
+                    <span class="badge">Web</span>
+                  </p>
                 </div>
                 <div class="card-footer text-right">
                   <a href="#" class="btn btn-primary disabled">構想中</a>
