--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="container">
 
         <section id="main" class="full-width-image mb-5">
-          <img src="assets/img/sake.png" class="img-fluid d-sm-none d-md-block" alt="日本酒">
+          <img src="assets/img/sake.png" class="img-fluid d-none d-md-block" alt="日本酒">
           <img src="assets/img/sake_sp.png" class="img-fluid d-sm-block d-md-none" alt="日本酒">
           <h2 class="catch-copy">日本酒が危ない</h2>
           <p class="body-copy">日本酒のオープンデータを全国の酒蔵と一緒につくり、日本酒の文化や技術を後世に残しながら、
