Sakepedia Nuxtのプロジェクトを追加

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <h2 class='text-center'>NEWS</h2>
           <div class="card">
             <ul class="list-group list-group-flush">
+              <li class="list-group-item">2020.08.17 Sakepedia Nuxtを公開しました。</li>
               <li class="list-group-item">2020.07.18 ソーシャルハックデーで活動しました。</li>
               <li class="list-group-item">2020.06.16 シビックテックライブでCode for SAKEのプロジェクト紹介をさせていただきました。</li>
               <li class="list-group-item">2020.05.23 ソーシャルハックデーで活動しました。</li>
@@ -64,6 +65,27 @@
         <section id="projects" class="mb-5">
           <h2 class='text-center'>Projects</h2>
           <div class="card-deck">
+            <div class="p-1 col-md-6 col-lg-4 mx-auto">
+              <div class="card h-100">
+                <img class="card-img-top" src="assets/img/sakepedia.png" alt="日本酒オープンデータ">
+                <div class="card-body">
+                  <h5 class="card-title">Sakepedia Nuxt</h5>
+                  <p class="card-text">日本酒オープンデータをみんなで作るプラットフォーム<a href="https://www.sakepedia.io/">本家Sakepedia</a>の更新が止まってしまい、不具合もあり更新ができない状況です。<br>
+                    Nuxt.jsで作り直してオープンソースとして公開しました。もちろんオープンデータとしてAPIでも取得できます。<br>
+                    随時更新していきます。</p>
+                  <p>
+                    <span class="badge">OpenData</span>
+                    <span class="badge">GitHub</span>
+                    <span class="badge">Nuxt.js</span>
+                    <span class="badge">mongodb</span>
+                  </p>
+                </div>
+                <div class="card-footer text-right">
+                  <a href="https://sakepedia.code4sake.org" class="btn btn-primary">Webサイト</a>
+                  <a href="https://github.com/Code-for-SAKE/Sakepedia-Nuxt" class="btn btn-primary">Go to GitHub</a>
+                </div>
+              </div>
+            </div>
             <div class="p-1 col-md-6 col-lg-4 mx-auto">
               <div class="card h-100">
                 <img class="card-img-top" src="assets/img/spreadsheet.png" alt="日本酒オープンデータ">
