--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <section id="main" class="full-width-image mb-5">
           <img src="assets/img/sake.png" class="img-fluid d-none d-md-block" alt="日本酒">
           <img src="assets/img/sake_sp.png" class="img-fluid d-sm-block d-md-none" alt="日本酒">
-          <h2 class="catch-copy">日本酒が危ない</h2>
-          <p class="body-copy">日本酒のオープンデータを全国の酒蔵と一緒につくり、日本酒の文化や技術を後世に残しながら、
+          <h2 class="catch-copy">日本酒の発酵技術や酒蔵の存続を支えたい</h2>
+          <p class="body-copy">全国の酒蔵と一緒に日本酒のオープンデータをつくり、文化や技術、美味しいお酒を後世に残しながら、
             酒蔵と飲兵衛の顔が見える関係性をネット上でつくりたい！と集まった人たちの活動</p>
         </section>
         
@@ -52,6 +52,7 @@
           <h2 class='text-center'>NEWS</h2>
           <div class="card">
             <ul class="list-group list-group-flush">
+              <li class="list-group-item">2021.01.23 ソーシャルハックデーで活動しました。</li>
               <li class="list-group-item">2020.08.17 Sakepedia Nuxtを公開しました。</li>
               <li class="list-group-item">2020.07.18 ソーシャルハックデーで活動しました。</li>
               <li class="list-group-item">2020.06.16 シビックテックライブでCode for SAKEのプロジェクト紹介をさせていただきました。</li>
